1. Improve performance of new big game by using one template. 2. Fix several bugs.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@74 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/Themes/DefaultSkin.xaml
+++ b/ClearMine/Themes/DefaultSkin.xaml
@@ -21,6 +21,16 @@
         </VisualBrush.Visual>
     </VisualBrush>
     
+    <VisualBrush x:Key="WrongMineMark">
+        <VisualBrush.Visual>
+            <Path StrokeThickness="2"
+                  Stroke="Red"
+                  SnapsToDevicePixels="False"
+                  Data="M0,0 L1,1 M1,0 L 0,1"
+                  Stretch="UniformToFill" />
+        </VisualBrush.Visual>
+    </VisualBrush>
+    
     <DrawingBrush x:Key="SeperatorBrush"
                   TileMode="Tile"
                   Viewport="0,0 1,2"
