1. Confirm when new game. 2. Statistics on game gives up. 3. Support Save/Load game and configuration support.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@75 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -18,6 +18,8 @@
         <x:Static Member="vm:ClearMineViewModel.OptionBinding" />
         <x:Static Member="vm:ClearMineViewModel.AboutBinding" />
         <x:Static Member="vm:ClearMineViewModel.FeedbackBinding" />
+        <x:Static Member="vm:ClearMineViewModel.SaveAsBinding" />
+        <x:Static Member="vm:ClearMineViewModel.OpenBinding" />
     </Window.CommandBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
@@ -26,6 +28,11 @@
                           Command="New" />
                 <MenuItem Header="Restart Game"
                           Command="Refresh" />
+                <Separator />
+                <MenuItem Header="Open Game..."
+                          Command="Open" />
+                <MenuItem Header="Save Game..."
+                          Command="SaveAs" />
                 <Separator />
                 <MenuItem Header="Statistics"
                           Command="{x:Static vm:ClearMineViewModel.ShowStatistics}" />
