--- a/ClearMine/Themes/Common.xaml
+++ b/ClearMine/Themes/Common.xaml
@@ -3,10 +3,10 @@
                     xmlns:local="clr-namespace:ClearMine.UI.Controls"
                     xmlns:con="clr-namespace:ClearMine.UI.Converters"
                     xmlns:logic="clr-namespace:ClearMine.Logic;assembly=ClearMine.Logic">
-    <con:CacheStateToVisibilityConverter x:Key="CacheStateToVisibilityConverter" />
-
+    <con:MathOperationConverter x:Key="MathOperationConverter" />
+    <con:PlaygroundBorderThicknessConverter x:Key="PlaygroundBorderThicknessConverter" />
     <DataTemplate DataType="{x:Type logic:MineCell}">
-        <local:MineCellControl Visibility="{Binding CachingState, Converter={StaticResource CacheStateToVisibilityConverter}}" />
+        <local:MineCellControl />
     </DataTemplate>
 
     <ControlTemplate x:Key="ValidationErrorTemplate">
